...
    <string name="cart_delivery">Delivery</string>
    <string name="cart_delivery_included">Included</string>
    <string name="cart_total">Total</string>
    <string name="action_continue_checkout">Continue to checkout</string>

    <string name="checkout_pay_on_delivery">Pay on delivery</string>
    <string name="checkout_place_order">Place order</string>
    <string name="checkout_place_demo_order">Place demo order</string>
</resources>

